ingress.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: dashboard-ingress
#   namespace: kubernetes-dashboard
# spec:
#   rules:
#   - host: 'kdashboard.com'
#     http:
#       paths: 
#         backend:
#           service:
#             name: kubernetes-dashboard
#             p ort:
#               number: 80


# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: dashboard-ingress
#   namespace: kubernetes-dashboard
# spec:
#   rules:
#   - host: "kdashboard.com"
#     http:
#       paths:
#       - pathType: Prefix
#         path: "/"
#         backend:
#           service:
#             name: kubernetes-dashboard
#             port:
#               number: 80


---


apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-app-ingress
spec:
  rules:
  - host: flask-app.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flask-app-service
            port:
              number: 5000
